# stream-player-web

./: .gitignore  README.md  docker-compose.yml  sonar-project.properties
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/routers/: stream.py
backend/app/schemas/: stream.py
backend/app/services/: resolver.py
backend/tests/: test_stream.py
docs/: requirements_specification.md  user_stories.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/e2e/: player.spec.ts
frontend/src/: App.module.css  App.test.tsx  App.tsx  index.css
frontend/src/components/: BottomPanels.tsx  MarkersPanel.test.tsx  MarkersPanel.tsx  ResizeSash.tsx  TransportBar.module.css  TransportBar.test.tsx  TransportBar.tsx  UrlBar.module.css  UrlBar.test.tsx  UrlBar.tsx  VideoPlayer.module.css  VideoPlayer.tsx
frontend/src/hooks/: useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useMarkers.test.ts  useMarkers.ts  useUrlHistory.test.ts  useUrlHistory.ts  useYouTubePlayer.ts
frontend/src/types/: youtube.ts
frontend/src/utils/: format.test.ts  format.ts  youtube-api.test.ts  youtube-api.ts
